WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101379
Indentation of JSCell.h is wrong
https://bugs.webkit.org/show_bug.cgi?id=101379
Summary
Indentation of JSCell.h is wrong
Filip Pizlo
Reported
2012-11-06 11:29:29 PST
patch forthcoming
Attachments
the patch
(21.82 KB, patch)
2012-11-06 12:27 PST
,
Filip Pizlo
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-11-06 12:27:31 PST
Created
attachment 172630
[details]
the patch
WebKit Review Bot
Comment 2
2012-11-06 12:30:47 PST
Attachment 172630
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/runtime/JSCell.h:91: Use 0 or null instead of NULL (even in *comments*). [readability/null] [4] Source/JavaScriptCore/runtime/JSCell.h:92: Use 0 or null instead of NULL (even in *comments*). [readability/null] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3
2012-11-06 12:34:45 PST
Comment on
attachment 172630
[details]
the patch rs=me. Changes like this can be just rubber-stamped on IRC, without going through Bugzilla.
Filip Pizlo
Comment 4
2012-11-06 13:14:02 PST
Landed in
http://trac.webkit.org/changeset/133661
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug