Indentation of JSCell.h is wrong https://bugs.webkit.org/show_bug.cgi?id=101379

Rubber stamped by Alexey Proskuryakov.

Just removed four spaces on a bunch of lines.

* runtime/JSCell.h:



Canonical link: https://commits.webkit.org/119473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133661 268f45cc-cd09-0410-ab3c-d52691b4dbfc